Bug 572889 - Move TabCandy out of a tab and into a per-window xul:deck [r=iangilman] Update code for tabCandy in xul:deck to not assume it's living in a tab and update various events and callbacks.
UltraBlame original commit: 9cd7341890b82d79c7964dd512d01cc062a37a40

--- a/browser/base/content/tabcandy/tabcandy.xhtml
+++ b/browser/base/content/tabcandy/tabcandy.xhtml
@@ -189,6 +189,32 @@ head
 >
 <
 body
+style
+=
+"
+background
+-
+color
+:
+transparent
+!
+important
+;
+-
+moz
+-
+appearance
+:
+none
+!
+important
+;
+"
+transparent
+=
+"
+true
+"
 >
 <
 a
