+ Moved our platform-independent tabcandy.css to browser/base/content/tabcandy/ + Created a platform-specific css file for tabcandy in the theme directory. + Copied the Mac TabCandy theme additions into the Windows and Linux themes.
UltraBlame original commit: 2763944239c22d251b7892478c83414a859832f0

--- a/browser/base/content/tabcandy/tabcandy.html
+++ b/browser/base/content/tabcandy/tabcandy.html
@@ -143,6 +143,29 @@ stylesheet
 href
 =
 "
+tabcandy
+.
+css
+"
+type
+=
+"
+text
+/
+css
+"
+/
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
 chrome
 :
 /
@@ -153,7 +176,7 @@ skin
 /
 tabcandy
 /
-tabcandy
+platform
 .
 css
 "
