+ Fixed: Bug 577164 - 0 height body leaving feedback and reset buttons stranded?
UltraBlame original commit: cbeaeeaa042fb776d8c7b49d33c68e1614c66d6c

--- a/browser/base/content/tabcandy/tabcandy.html
+++ b/browser/base/content/tabcandy/tabcandy.html
@@ -227,6 +227,14 @@ div
 id
 =
 "
+content
+"
+>
+<
+div
+id
+=
+"
 feedback
 "
 class
@@ -255,6 +263,10 @@ bottomButton
 "
 >
 reset
+<
+/
+div
+>
 <
 /
 div
