Bug 583044 - Rename code references of TabCandy to TabView Move files and update references to tabview from tabcandy. Only remaining candy reference is the link to aza's webm video.
UltraBlame original commit: 4285a6de57558b9708ab7c35a5214af4fc9cf188

--- a/browser/base/content/tabview/tabview.html
+++ b/browser/base/content/tabview/tabview.html
@@ -143,7 +143,7 @@ stylesheet
 href
 =
 "
-tabcandy
+tabview
 .
 css
 "
@@ -174,7 +174,7 @@ browser
 /
 skin
 /
-tabcandy
+tabview
 /
 platform
 .
@@ -279,7 +279,7 @@ version
 src
 =
 "
-tabcandy
+tabview
 .
 js
 "
