Fix some editor tests to actually change something instead of throwing.
UltraBlame original commit: 2ce3d3fdd6806e29c5b39b13d4e088bdbacdf5a7

--- a/editor/libeditor/html/crashtests/448329-1.html
+++ b/editor/libeditor/html/crashtests/448329-1.html
@@ -101,6 +101,30 @@ designMode
 On
 "
 ;
+/
+/
+Work
+around
+getSelection
+depending
+on
+a
+presshell
+but
+not
+flushing
+to
+get
+/
+/
+one
+.
+doc
+.
+body
+.
+offsetWidth
+;
 var
 s
 =
