--- a/editor/libeditor/html/crashtests/448329-3.html
+++ b/editor/libeditor/html/crashtests/448329-3.html
@@ -104,6 +104,30 @@ designMode
 On
 "
 ;
+/
+/
+Work
+around
+getSelection
+depending
+on
+a
+presshell
+but
+not
+flushing
+to
+get
+/
+/
+one
+.
+doc
+.
+body
+.
+offsetWidth
+;
 var
 s
 =
