--- a/content/base/test/test_bug418214.html
+++ b/content/base/test/test_bug418214.html
@@ -626,14 +626,21 @@ style
 "
 )
 "
+border
+:
+:
+invalid
 "
 "
 Getting
 .
 style
-should
-parse
+shouldn
+'
+t
+affect
 style
+attribute
 on
 HTML
 "
@@ -650,14 +657,21 @@ style
 "
 )
 "
+border
+:
+:
+invalid
 "
 "
 Getting
 .
 style
-should
-parse
+shouldn
+'
+t
+affect
 style
+attribute
 on
 SVG
 "
@@ -686,10 +700,105 @@ style
 shouldn
 '
 t
+affect
+style
+attribute
+on
+MathML
+"
+)
+;
+d2
+.
+style
+.
+color
+=
+"
+green
+"
+;
+s2
+.
+style
+.
+color
+=
+"
+green
+"
+;
+is
+(
+m2
+.
+style
+undefined
+"
+.
+style
+shouldn
+'
+t
+exist
+on
+MathML
+"
+)
+;
+is
+(
+d2
+.
+getAttribute
+(
+"
+style
+"
+)
+"
+color
+:
+green
+;
+"
+"
+Adjusting
+.
+style
+should
 parse
 style
 on
-MathML
+HTML
+"
+)
+;
+is
+(
+s2
+.
+getAttribute
+(
+"
+style
+"
+)
+"
+color
+:
+green
+;
+"
+"
+Getting
+.
+style
+should
+parse
+style
+on
+SVG
 "
 )
 ;
@@ -845,9 +954,134 @@ style
 "
 )
 "
+border
+:
+:
+invalid
 "
 "
-Insertion
+Adopting
+should
+not
+parse
+style
+on
+HTML
+"
+)
+;
+is
+(
+s
+.
+getAttribute
+(
+"
+style
+"
+)
+"
+border
+:
+:
+invalid
+"
+"
+Adopting
+should
+not
+parse
+style
+on
+SVG
+"
+)
+;
+is
+(
+m
+.
+getAttribute
+(
+"
+style
+"
+)
+"
+border
+:
+:
+invalid
+"
+"
+Adopting
+should
+not
+parse
+style
+on
+MathML
+"
+)
+;
+d
+.
+style
+.
+color
+=
+"
+green
+"
+;
+s
+.
+style
+.
+color
+=
+"
+green
+"
+;
+is
+(
+m
+.
+style
+undefined
+"
+.
+style
+shouldn
+'
+t
+exist
+on
+MathML
+"
+)
+;
+is
+(
+d
+.
+getAttribute
+(
+"
+style
+"
+)
+"
+color
+:
+green
+;
+"
+"
+Adjusting
+.
+style
 should
 parse
 style
@@ -867,36 +1101,20 @@ style
 "
 )
 "
+color
+:
+green
+;
 "
 "
-Insertion
+Adjusting
+.
+style
 should
 parse
 style
 on
 SVG
-"
-)
-;
-is
-(
-m
-.
-getAttribute
-(
-"
-style
-"
-)
-"
-"
-"
-Insertion
-should
-parse
-style
-on
-MathML
 "
 )
 ;
