--- a/toolkit/content/aboutSupport.xhtml
+++ b/toolkit/content/aboutSupport.xhtml
@@ -1269,6 +1269,75 @@ table
 -
 >
 <
+h2
+class
+=
+"
+major
+-
+section
+"
+>
+&
+aboutSupport
+.
+graphicsTitle
+;
+<
+/
+h2
+>
+<
+table
+>
+<
+tbody
+>
+<
+tr
+>
+<
+th
+class
+=
+"
+column
+"
+>
+&
+aboutSupport
+.
+graphicsDirect2DEnabled
+;
+<
+/
+th
+>
+<
+td
+id
+=
+"
+direct2d
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+/
+tbody
+>
+<
+/
+table
+>
+<
 /
 div
 >
