Bug 576777 - provide quick access to link index, r=marcoz, davidb, sr=neil
UltraBlame original commit: dec698262ea89ce531f25178682de5ac25cae934

--- a/accessible/tests/mochitest/attributes/test_text.html
+++ b/accessible/tests/mochitest/attributes/test_text.html
@@ -3683,11 +3683,46 @@ ID
 kInputFontSize
 )
 ;
+/
+/
+XXX
+:
+While
+we
+expose
+text
+leaf
+accessibles
+for
+placeholder
+we
+grab
+its
+/
+/
+style
+bug
+545817
+.
+/
+/
 attrs
 =
 {
+color
+:
+"
+rgb
+(
+109
+109
+109
+)
+"
 }
 ;
+/
+/
 testTextAttrs
 (
 ID
@@ -3696,6 +3731,21 @@ attrs
 defAttrs
 0
 0
+)
+;
+todo
+(
+false
+"
+enable
+commented
+tests
+when
+bug
+545817
+is
+fixed
+"
 )
 ;
 /
