Bug 587316 - Part 2: Disable degenerate rect stroking test. r=jrmuizel
UltraBlame original commit: ea6bbdbf14906e86599d3648594ad5aefc322321

--- a/content/canvas/test/test_canvas.html
+++ b/content/canvas/test/test_canvas.html
@@ -80,6 +80,72 @@ waitForExplicitFinish
 (
 )
 ;
+function
+IsD2DEnabled
+(
+)
+{
+var
+enabled
+=
+false
+;
+try
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+enabled
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+gfx
+/
+info
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIGfxInfo
+)
+.
+D2DEnabled
+;
+}
+catch
+(
+e
+)
+{
+}
+return
+enabled
+;
+}
 <
 /
 script
@@ -114390,6 +114456,27 @@ getContext
 '
 )
 ;
+if
+(
+!
+IsD2DEnabled
+(
+)
+)
+{
+/
+/
+Disabled
+for
+D2D
+until
+we
+can
+figure
+out
+Bug
+587554
+.
 ctx
 .
 strokeStyle
@@ -114439,6 +114526,7 @@ ctx
 0
 )
 ;
+}
 }
 <
 /
@@ -144723,6 +144811,27 @@ getContext
 '
 )
 ;
+if
+(
+!
+IsD2DEnabled
+(
+)
+)
+{
+/
+/
+Disabled
+for
+D2D
+until
+we
+can
+figure
+out
+Bug
+587554
+.
 ctx
 .
 strokeStyle
@@ -144760,6 +144869,7 @@ ctx
 0
 )
 ;
+}
 }
 <
 /
