Bug 587316 - Part 6: Disable failing gradient test on D2D. r=jrmuizel
UltraBlame original commit: 0fb6352dc09cc885d0345c4c5689ccb4b38d471d

--- a/content/canvas/test/test_canvas.html
+++ b/content/canvas/test/test_canvas.html
@@ -44055,6 +44055,50 @@ getContext
 '
 )
 ;
+if
+(
+!
+IsD2DEnabled
+(
+)
+)
+{
+/
+/
+Only
+run
+this
+on
+non
+-
+D2D
+.
+On
+D2D
+the
+different
+nature
+of
+how
+gradients
+/
+/
+are
+drawn
+makes
+it
+so
+we
+cannot
+guarantee
+these
+stops
+are
+completely
+/
+/
+hard
+.
 canvas
 .
 width
@@ -44364,6 +44408,7 @@ ctx
 16
 )
 ;
+}
 }
 <
 /
