Bug 587316 - Part 5: Disable failing rectangle drawing test failing due to D2D inaccuracy. r=jrmuizel
UltraBlame original commit: 6aa55fbbabc0100ee46aed3d63b6ae0fe0577ae1

--- a/content/canvas/test/test_canvas.html
+++ b/content/canvas/test/test_canvas.html
@@ -117011,6 +117011,30 @@ getContext
 '
 )
 ;
+if
+(
+!
+IsD2DEnabled
+(
+)
+)
+{
+/
+/
+On
+D2D
+a
+rasterization
+bug
+causes
+a
+small
+discrepancy
+here
+.
+See
+bug
+587316
 ctx
 .
 fillStyle
@@ -117268,6 +117292,7 @@ ctx
 0
 )
 ;
+}
 }
 <
 /
