--- a/modules/plugin/test/mochitest/test_painting.html
+++ b/modules/plugin/test/mochitest/test_painting.html
@@ -520,6 +520,69 @@ invalidate
 (
 )
 {
+var
+paintCount
+=
+1
+;
+try
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+if
+(
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+gfx
+/
+info
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIGfxInfo
+)
+.
+D2DEnabled
+)
+{
+paintCount
+=
+2
+;
+}
+}
+catch
+(
+e
+)
+{
+}
 is
 (
 clipped
@@ -527,7 +590,7 @@ clipped
 getPaintCount
 (
 )
-1
+paintCount
 "
 partially
 clipped
@@ -561,6 +624,85 @@ done
 (
 )
 {
+var
+paintCount
+=
+2
+;
+try
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+if
+(
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+gfx
+/
+info
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIGfxInfo
+)
+.
+D2DEnabled
+)
+{
+paintCount
+=
+4
+;
+}
+}
+catch
+(
+e
+)
+{
+}
+/
+/
+With
+D2D
+we
+paint
+windowless
+plugin
+with
+2
+passes
+4
+paints
+are
+expected
+.
 is
 (
 clipped
@@ -568,7 +710,7 @@ clipped
 getPaintCount
 (
 )
-2
+paintCount
 "
 painted
 after
