Bug 548523 - Replace HTMLMediaElement.autobuffer attribute with 'preload'. r=roc a=blocking2.0
UltraBlame original commit: 42c8cd0e1a657f40917c72941609a5defffb2ed2

--- a/content/media/test/test_audio1.html
+++ b/content/media/test/test_audio1.html
@@ -207,14 +207,16 @@ a1
 getAttribute
 (
 "
-autobuffer
+preload
 "
 )
 "
-autobuffer
+auto
 "
 "
-Autobuffer
+preload
+:
+auto
 automatically
 set
 "
