--- a/content/media/test/test_audio2.html
+++ b/content/media/test/test_audio2.html
@@ -218,16 +218,18 @@ a1
 getAttribute
 (
 "
-autobuffer
+preload
 "
 )
 "
-autobuffer
+auto
 "
 "
-Autobuffer
+Preload
 automatically
 set
+to
+auto
 "
 )
 ;
