--- a/content/media/test/test_preload_suspend.html
+++ b/content/media/test/test_preload_suspend.html
@@ -230,7 +230,11 @@ stopPropagation
 (
 )
 "
-autobuffer
+preload
+=
+"
+auto
+"
 >
 <
 /
@@ -339,6 +343,12 @@ application
 javascript
 "
 >
+function
+is
+(
+)
+{
+}
 var
 suspendCount
 =
@@ -610,9 +620,11 @@ event
 .
 target
 .
-autobuffer
+preload
 =
-true
+"
+auto
+"
 ;
 }
 else
