--- a/content/media/test/test_preload_attribute.html
+++ b/content/media/test/test_preload_attribute.html
@@ -234,7 +234,11 @@ stopPropagation
 )
 ;
 "
-autobuffer
+preload
+=
+"
+auto
+"
 >
 <
 /
@@ -258,7 +262,11 @@ stopPropagation
 )
 ;
 "
-autobuffer
+preload
+=
+"
+auto
+"
 >
 <
 /
@@ -330,109 +338,177 @@ a2
 '
 )
 ;
-ok
+is
 (
-!
 v1
 .
-autobuffer
+getAttribute
+(
 "
-v1
-.
-autobuffer
+preload
+"
+)
+undefined
+"
+video
+preload
+via
+getAttribute
 should
 be
-false
+undefined
 by
 default
 "
 )
 ;
-ok
+is
 (
-!
 a1
 .
-autobuffer
+getAttribute
+(
 "
-v1
-.
-autobuffer
+preload
+"
+)
+undefined
+"
+video
+preload
+via
+getAttribute
 should
 be
-false
+undefined
 by
 default
 "
 )
 ;
-ok
+is
 (
-v2
+v1
 .
-autobuffer
+preload
 "
-v2
+"
+"
+v1
 .
-autobuffer
+preload
 should
 be
-true
+undefined
+by
+default
 "
 )
 ;
-ok
+is
+(
+a1
+.
+preload
+"
+"
+"
+a1
+.
+preload
+should
+be
+undefined
+by
+default
+"
+)
+;
+is
+(
+v2
+.
+preload
+"
+auto
+"
+"
+v2
+.
+preload
+should
+be
+auto
+"
+)
+;
+is
 (
 a2
 .
-autobuffer
+preload
 "
-v2
+auto
+"
+"
+a2
 .
-autobuffer
+preload
 should
 be
-true
+auto
 "
 )
 ;
 v1
 .
-autobuffer
+preload
 =
-true
+"
+auto
+"
 ;
 a1
 .
-autobuffer
+preload
 =
-true
+"
+auto
+"
 ;
-ok
+is
 (
 v1
 .
-autobuffer
+preload
+"
+auto
+"
 "
 video
 .
-autobuffer
-not
-true
+preload
+should
+be
+auto
 "
 )
 ;
-ok
+is
 (
 a1
 .
-autobuffer
+preload
+"
+auto
+"
 "
 audio
 .
-autobuffer
-not
-true
+preload
+should
+be
+auto
 "
 )
 ;
@@ -443,17 +519,19 @@ v1
 getAttribute
 (
 "
-autobuffer
+preload
 "
 )
 "
+auto
 "
 "
 video
-autobuffer
+preload
 attribute
-not
-set
+should
+be
+auto
 "
 )
 ;
@@ -464,17 +542,19 @@ a1
 getAttribute
 (
 "
-autobuffer
+preload
 "
 )
 "
+auto
 "
 "
 video
-autobuffer
+preload
 attribute
-not
-set
+should
+be
+auto
 "
 )
 ;
