Bug 548523 - Disable test_preload_actions.html case 9 until bug 568402 is fixed. a=test-fix
UltraBlame original commit: 137f0ce0e0ca8cf1cb97c9994821fb702738672d

--- a/content/media/test/test_preload_actions.html
+++ b/content/media/test/test_preload_actions.html
@@ -2752,6 +2752,8 @@ load
 .
 }
 }
+/
+*
 {
 /
 /
@@ -2771,6 +2773,39 @@ media
 to
 be
 loaded
+.
+/
+/
+For
+some
+reason
+we
+don
+'
+t
+always
+receive
+the
+canplaythrough
+event
+particuarly
+on
+this
+test
+.
+/
+/
+We
+'
+ve
+disabled
+this
+test
+until
+bug
+568402
+is
+fixed
 .
 canplaythrough
 :
@@ -2977,6 +3012,8 @@ load
 .
 }
 }
+*
+/
 {
 /
 /
