Backed out changeset 42c8cd0e1a65
UltraBlame original commit: 898826f524023eb4ac5d3ca7f3b3329449808812

--- a/content/media/test/test_audio1.html
+++ b/content/media/test/test_audio1.html
@@ -207,16 +207,14 @@ a1
 getAttribute
 (
 "
-preload
+autobuffer
 "
 )
 "
-auto
+autobuffer
 "
 "
-preload
-:
-auto
+Autobuffer
 automatically
 set
 "
