--- a/content/media/test/test_audio2.html
+++ b/content/media/test/test_audio2.html
@@ -218,18 +218,16 @@ a1
 getAttribute
 (
 "
-preload
+autobuffer
 "
 )
 "
-auto
+autobuffer
 "
 "
-Preload
+Autobuffer
 automatically
 set
-to
-auto
 "
 )
 ;
