--- a/content/media/test/test_autobuffer2.html
+++ b/content/media/test/test_autobuffer2.html
@@ -230,11 +230,7 @@ stopPropagation
 (
 )
 "
-preload
-=
-"
-auto
-"
+autobuffer
 >
 <
 /
@@ -343,12 +339,6 @@ application
 javascript
 "
 >
-function
-is
-(
-)
-{
-}
 var
 suspendCount
 =
@@ -620,11 +610,9 @@ event
 .
 target
 .
-preload
+autobuffer
 =
-"
-auto
-"
+true
 ;
 }
 else
