Bug 487402 - test_dynUnsecureRedirect.html intermittently fails, change timeouts to callbacks where possible, r=kaie, a=test only change/orange fix
UltraBlame original commit: ea40235da826c2f76f1b80a2cf9c63233f37b198

--- a/security/manager/ssl/tests/mochitest/mixedcontent/test_cssContent2.html
+++ b/security/manager/ssl/tests/mochitest/mixedcontent/test_cssContent2.html
@@ -186,10 +186,11 @@ jpg
 )
 "
 ;
-window
-.
-setTimeout
+waitForSecurityState
 (
+"
+broken
+"
 function
 (
 )
@@ -215,7 +216,6 @@ finish
 )
 ;
 }
-500
 )
 ;
 }
