--- a/security/manager/ssl/tests/mochitest/mixedcontent/test_dynDelayedUnsecurePicture.html
+++ b/security/manager/ssl/tests/mochitest/mixedcontent/test_dynDelayedUnsecurePicture.html
@@ -205,10 +205,11 @@ jpg
 0
 )
 ;
-window
-.
-setTimeout
+waitForSecurityState
 (
+"
+broken
+"
 function
 (
 )
@@ -241,7 +242,6 @@ finish
 )
 ;
 }
-500
 )
 ;
 }
