--- a/security/manager/ssl/tests/mochitest/mixedcontent/test_dynUnsecureBackground.html
+++ b/security/manager/ssl/tests/mochitest/mixedcontent/test_dynUnsecureBackground.html
@@ -200,10 +200,11 @@ moonsurface
 jpg
 "
 ;
-window
-.
-setTimeout
+waitForSecurityState
 (
+"
+broken
+"
 function
 (
 )
@@ -240,7 +241,6 @@ finish
 )
 ;
 }
-500
 )
 ;
 }
