--- a/security/manager/ssl/tests/mochitest/mixedcontent/test_innerHtmlDelayedUnsecurePicture.html
+++ b/security/manager/ssl/tests/mochitest/mixedcontent/test_innerHtmlDelayedUnsecurePicture.html
@@ -205,10 +205,11 @@ jpg
 1
 )
 ;
-window
-.
-setTimeout
+waitForSecurityState
 (
+"
+broken
+"
 function
 (
 )
@@ -233,7 +234,6 @@ finish
 )
 ;
 }
-500
 )
 ;
 }
