Bug 583586 - Value sanitizing algorithm form <input type='email'>. r=smaug a2.0=blocking
UltraBlame original commit: 7582e7c13dce893ab961b0b46c9f1e2b15574c2d

--- a/content/html/content/test/test_bug555559.html
+++ b/content/html/content/test/test_bug555559.html
@@ -279,100 +279,6 @@ true
 ;
 }
 function
-todoCheckValidEmailAddress
-(
-element
-)
-{
-gInvalid
-=
-false
-;
-todo
-(
-!
-element
-.
-validity
-.
-typeMismatch
-"
-Element
-should
-not
-suffer
-from
-type
-mismatch
-"
-)
-;
-todo
-(
-element
-.
-validity
-.
-valid
-"
-Element
-should
-be
-valid
-"
-)
-;
-todo
-(
-element
-.
-checkValidity
-(
-)
-"
-Element
-should
-be
-valid
-"
-)
-;
-todo
-(
-!
-gInvalid
-"
-The
-invalid
-event
-should
-not
-have
-been
-thrown
-"
-)
-;
-todo_is
-(
-element
-.
-validationMessage
-'
-'
-"
-Validation
-message
-should
-be
-the
-empty
-string
-"
-)
-;
-}
-function
 checkValidEmailAddress
 (
 element
@@ -826,7 +732,7 @@ bar
 com
 '
 ;
-todoCheckValidEmailAddress
+checkValidEmailAddress
 (
 email
 )
@@ -844,7 +750,7 @@ bar
 com
 '
 ;
-todoCheckValidEmailAddress
+checkValidEmailAddress
 (
 email
 )
@@ -1125,7 +1031,7 @@ nar
 com
 '
 ;
-todoCheckValidEmailAddress
+checkValidEmailAddress
 (
 email
 )
@@ -1143,7 +1049,7 @@ rar
 com
 '
 ;
-todoCheckValidEmailAddress
+checkValidEmailAddress
 (
 email
 )
