Bug 555559 - Implement <input type="email">. r=smaug,sicking sr=jst a2.0=blocking
UltraBlame original commit: 010d34a2c89e34b954087c919b6fb9dd745f98b0

--- a/content/html/content/test/test_bug345822.html
+++ b/content/html/content/test/test_bug345822.html
@@ -670,7 +670,7 @@ wrong
 else
 if
 (
-input
+element
 .
 type
 =
@@ -929,6 +929,32 @@ checkSufferingFromBeingMissing
 element
 )
 ;
+if
+(
+element
+.
+type
+=
+=
+'
+email
+'
+)
+{
+element
+.
+value
+=
+'
+foo
+bar
+.
+com
+'
+;
+}
+else
+{
 element
 .
 value
@@ -937,6 +963,7 @@ value
 foo
 '
 ;
+}
 checkNotSufferingFromBeingMissing
 (
 element
@@ -1765,16 +1792,11 @@ check
 url
 '
 '
-email
-'
-'
 datetime
 '
 '
 date
 '
-/
-/
 '
 month
 '
@@ -1784,6 +1806,8 @@ week
 '
 time
 '
+/
+/
 '
 datetime
 -
@@ -1793,8 +1817,6 @@ and
 '
 number
 '
-/
-/
 when
 they
 will
@@ -1885,6 +1907,19 @@ type
 =
 '
 tel
+'
+;
+checkInputRequiredValidity
+(
+input
+)
+;
+input
+.
+type
+=
+'
+email
 '
 ;
 checkInputRequiredValidity
