--- a/content/html/content/test/test_bug551670.html
+++ b/content/html/content/test/test_bug551670.html
@@ -799,6 +799,33 @@ i2
 text
 '
 '
+email
+'
+wrongType
+)
+;
+checkType
+(
+document
+.
+getElementById
+(
+'
+i1
+'
+)
+document
+.
+getElementById
+(
+'
+i2
+'
+)
+'
+text
+'
+'
 file
 '
 wrongType
