--- a/content/html/content/test/test_bug549475.html
+++ b/content/html/content/test/test_bug549475.html
@@ -268,15 +268,15 @@ button
 "
 email
 "
+"
+url
+"
 ]
 ;
 var
 todoTypes
 =
 [
-"
-url
-"
 "
 number
 "
@@ -421,21 +421,6 @@ case
 url
 "
 :
-/
-/
-TODO
-:
-uncomment
-the
-next
-line
-when
-url
-is
-implemented
-.
-/
-/
 return
 aValue
 .
@@ -469,12 +454,7 @@ s
 g
 "
 "
-'
 )
-;
-return
-"
-"
 ;
 case
 "
@@ -619,6 +599,17 @@ n
 \
 r
 bar
+"
+"
+\
+r
+\
+n
+foobar
+\
+n
+\
+r
 "
 ]
 ;
