Bug 344615 - Implement <input type="url">. r=sicking, sr=smaug a2.0=blocking
UltraBlame original commit: acc8ccecdc908498b010c2d8d50a85db41523158

--- a/content/html/content/test/test_bug345822.html
+++ b/content/html/content/test/test_bug345822.html
@@ -954,6 +954,35 @@ com
 ;
 }
 else
+if
+(
+element
+.
+type
+=
+=
+'
+url
+'
+)
+{
+element
+.
+value
+=
+'
+http
+:
+/
+/
+mozilla
+.
+org
+/
+'
+;
+}
+else
 {
 element
 .
@@ -1789,9 +1818,6 @@ TODO
 :
 check
 '
-url
-'
-'
 datetime
 '
 '
@@ -1806,13 +1832,13 @@ week
 '
 time
 '
-/
-/
 '
 datetime
 -
 local
 '
+/
+/
 and
 '
 number
@@ -1920,6 +1946,19 @@ type
 =
 '
 email
+'
+;
+checkInputRequiredValidity
+(
+input
+)
+;
+input
+.
+type
+=
+'
+url
 '
 ;
 checkInputRequiredValidity
