--- a/content/html/content/test/test_bug551670.html
+++ b/content/html/content/test/test_bug551670.html
@@ -1047,6 +1047,33 @@ search
 wrongType
 )
 ;
+checkType
+(
+document
+.
+getElementById
+(
+'
+i1
+'
+)
+document
+.
+getElementById
+(
+'
+i2
+'
+)
+'
+text
+'
+'
+url
+'
+wrongType
+)
+;
 <
 /
 script
