Bug 546857 Part 3: Make error pages not use xul buttons. r=dao a=blocker
UltraBlame original commit: 61fd19a4587f89ab75f259e0742de56eb94f57f7

--- a/browser/base/content/aboutRobots.xhtml
+++ b/browser/base/content/aboutRobots.xhtml
@@ -880,13 +880,9 @@ label2
 ;
 button
 .
-setAttribute
-(
-"
-label
-"
+textContent
+=
 newLabel
-)
 ;
 buttonClicked
 =
@@ -1309,49 +1305,11 @@ Button
 -
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 errorTryAgain
-"
-label
-=
-"
-&
-retry
-.
-label
-;
 "
 label2
 =
@@ -1362,7 +1320,7 @@ robots
 dontpress
 ;
 "
-oncommand
+onclick
 =
 "
 robotButton
@@ -1370,7 +1328,15 @@ robotButton
 )
 ;
 "
+>
+&
+retry
+.
+label
+;
+<
 /
+button
 >
 <
 img
