--- a/docshell/resources/content/netError.xhtml
+++ b/docshell/resources/content/netError.xhtml
@@ -3549,51 +3549,13 @@ Button
 -
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 errorTryAgain
 "
-label
-=
-"
-&
-retry
-.
-label
-;
-"
-oncommand
+onclick
 =
 "
 retryThis
@@ -3602,7 +3564,15 @@ this
 )
 ;
 "
+>
+&
+retry
+.
+label
+;
+<
 /
+button
 >
 <
 /
