Bug 566128 (2/3) - Add mozActionUri to get the resolved action URI from scripts. r=sicking a2.0=blocking
UltraBlame original commit: 4f8eb1ef49631b77282362f21453306eb79dadff

--- a/content/html/content/test/test_bug392567.html
+++ b/content/html/content/test/test_bug392567.html
@@ -412,6 +412,7 @@ jarUrl
 ?
 PARAMS
 "
+null
 ]
 [
 jarUrl
@@ -428,6 +429,7 @@ jarUrl
 ?
 PARAMS
 "
+null
 ]
 [
 jarUrl
@@ -448,6 +450,7 @@ PARAMS
 #
 jarTest5
 "
+null
 ]
 [
 "
@@ -480,6 +483,7 @@ html
 ?
 PARAMS
 "
+null
 ]
 [
 "
@@ -519,6 +523,7 @@ How
 ?
 PARAMS
 "
+null
 ]
 [
 httpUrl
@@ -528,6 +533,7 @@ httpUrl
 ?
 PARAMS
 "
+null
 ]
 [
 httpUrl
@@ -544,6 +550,7 @@ httpUrl
 ?
 PARAMS
 "
+null
 ]
 [
 httpUrl
@@ -564,6 +571,7 @@ PARAMS
 #
 httpTest5
 "
+null
 ]
 [
 "
@@ -576,6 +584,7 @@ key
 =
 value0
 "
+null
 ]
 [
 "
@@ -588,6 +597,9 @@ key
 =
 value0
 "
+document
+.
+location
 ]
 [
 "
@@ -601,6 +613,7 @@ previousDir
 ?
 PARAMS
 "
+previousDir
 ]
 ]
 ;
@@ -686,6 +699,46 @@ the
 action
 content
 attribute
+"
+)
+;
+is
+(
+form
+.
+mozActionUri
+tests
+[
+currentTest
+]
+[
+2
+]
+?
+tests
+[
+currentTest
+]
+[
+2
+]
+:
+tests
+[
+currentTest
+]
+[
+0
+]
+"
+mozActionUri
+IDL
+attribute
+should
+resolve
+the
+action
+URI
 "
 )
 ;
