Bug 566128 (1/3) - HTMLFormElement action IDL attribute should reflect the action content attribute. r=sicking a2.0=blocking
UltraBlame original commit: 4d2aa287de9e1e054ae3f84c86726afb648aff5c

--- a/content/html/content/test/test_bug392567.html
+++ b/content/html/content/test/test_bug392567.html
@@ -330,6 +330,30 @@ _404
 )
 ;
 var
+previousDir
+=
+location
+.
+href
+.
+replace
+(
+/
+test
+\
+/
+[
+^
+\
+/
+]
+*
+/
+"
+"
+)
+;
+var
 form
 =
 document
@@ -541,6 +565,43 @@ PARAMS
 httpTest5
 "
 ]
+[
+"
+"
+jarUrl
++
+"
+?
+key
+=
+value0
+"
+]
+[
+"
+"
+jarUrl
++
+"
+?
+key
+=
+value0
+"
+]
+[
+"
+.
+.
+/
+"
+previousDir
++
+"
+?
+PARAMS
+"
+]
 ]
 ;
 var
@@ -589,8 +650,11 @@ return
 }
 form
 .
+setAttribute
+(
+"
 action
-=
+"
 tests
 [
 currentTest
@@ -598,6 +662,32 @@ currentTest
 [
 0
 ]
+)
+;
+is
+(
+form
+.
+action
+tests
+[
+currentTest
+]
+[
+0
+]
+"
+action
+IDL
+attribute
+should
+reflect
+the
+action
+content
+attribute
+"
+)
 ;
 form
 .
