Bug 582412 - Implement formmethod, formenctype. r=smaug sr=sicking a2.0=blocking
UltraBlame original commit: 7a5dfaf19c26631fe2c89c6aaf9abe53151f1b9d

--- a/content/html/content/test/test_bug585508.html
+++ b/content/html/content/test/test_bug585508.html
@@ -316,23 +316,12 @@ put
 ]
 ]
 ;
-var
-form
-=
-document
-.
-createElement
-(
-'
-form
-'
-)
-;
 function
 checkAttribute
 (
 form
-name
+attrName
+idlName
 data
 )
 {
@@ -342,22 +331,22 @@ form
 .
 getAttribute
 (
-name
+attrName
 )
-undefined
+null
 "
 By
 default
 "
 +
-name
+attrName
 +
 "
 content
 attribute
 should
 be
-undefined
+null
 "
 )
 ;
@@ -365,7 +354,7 @@ is
 (
 form
 [
-name
+idlName
 ]
 data
 [
@@ -379,7 +368,7 @@ By
 default
 "
 +
-name
+idlName
 +
 "
 IDL
@@ -418,7 +407,7 @@ form
 .
 setAttribute
 (
-name
+attrName
 data
 [
 1
@@ -434,7 +423,7 @@ form
 .
 getAttribute
 (
-name
+attrName
 )
 data
 [
@@ -457,7 +446,7 @@ is
 (
 form
 [
-name
+idlName
 ]
 data
 [
@@ -471,7 +460,7 @@ When
 getting
 "
 +
-name
+idlName
 +
 "
 IDL
@@ -514,7 +503,7 @@ form
 .
 setAttribute
 (
-name
+attrName
 data
 [
 2
@@ -530,7 +519,7 @@ form
 .
 getAttribute
 (
-name
+attrName
 )
 data
 [
@@ -553,7 +542,7 @@ is
 (
 form
 [
-name
+idlName
 ]
 data
 [
@@ -567,7 +556,7 @@ When
 getting
 "
 +
-name
+idlName
 +
 "
 IDL
@@ -612,7 +601,7 @@ form
 .
 setAttribute
 (
-name
+attrName
 data
 [
 3
@@ -628,7 +617,7 @@ form
 .
 getAttribute
 (
-name
+attrName
 )
 data
 [
@@ -651,7 +640,7 @@ todo_is
 (
 form
 [
-name
+idlName
 ]
 data
 [
@@ -665,7 +654,7 @@ When
 getting
 "
 +
-name
+idlName
 +
 "
 IDL
@@ -690,9 +679,48 @@ known
 ;
 }
 }
+var
+form
+=
+document
+.
+createElement
+(
+'
+form
+'
+)
+;
+var
+input
+=
+document
+.
+createElement
+(
+'
+input
+'
+)
+;
+var
+button
+=
+document
+.
+createElement
+(
+'
+button
+'
+)
+;
 checkAttribute
 (
 form
+'
+enctype
+'
 '
 enctype
 '
@@ -704,6 +732,57 @@ checkAttribute
 form
 '
 method
+'
+'
+method
+'
+methodTestData
+)
+;
+checkAttribute
+(
+input
+'
+formenctype
+'
+'
+formEnctype
+'
+enctypeTestData
+)
+;
+checkAttribute
+(
+input
+'
+formmethod
+'
+'
+formMethod
+'
+methodTestData
+)
+;
+checkAttribute
+(
+button
+'
+formenctype
+'
+'
+formEnctype
+'
+enctypeTestData
+)
+;
+checkAttribute
+(
+button
+'
+formmethod
+'
+'
+formMethod
 '
 methodTestData
 )
