Bug 589026 - Reduce time taken by test_bug535043.html. r=ehsan a=test-only
UltraBlame original commit: 9f78a5f80a44a7441ca3afbf986260373dccf102

--- a/content/html/content/test/test_bug535043.html
+++ b/content/html/content/test/test_bug535043.html
@@ -232,18 +232,6 @@ maxlength
 textarea
 >
 <
-textarea
-maxlength
-=
-"
-257
-"
->
-<
-/
-textarea
->
-<
 /
 div
 >
@@ -303,7 +291,7 @@ j
 ;
 j
 <
-259
+3
 ;
 j
 +
@@ -468,7 +456,7 @@ textArea
 value
 .
 length
-259
+3
 '
 textarea
 with
@@ -583,7 +571,6 @@ testNums
 1
 0
 2
-257
 ]
 ;
 for
@@ -706,7 +693,19 @@ textArea
 )
 ;
 }
+SimpleTest
+.
+finish
+(
+)
+;
 }
+)
+;
+SimpleTest
+.
+waitForExplicitFinish
+(
 )
 ;
 <
