Bug 585374 - Add RTL support to about:about, r=gavin, a=gavin
UltraBlame original commit: 76ab4a4d111cd6083069a8a86298a1a4d73886a7

--- a/toolkit/content/aboutAbout.xhtml
+++ b/toolkit/content/aboutAbout.xhtml
@@ -83,6 +83,29 @@ dtd
 %
 aboutAboutDTD
 ;
+<
+!
+ENTITY
+%
+globalDTD
+SYSTEM
+"
+chrome
+:
+/
+/
+global
+/
+locale
+/
+global
+.
+dtd
+"
+>
+%
+globalDTD
+;
 ]
 >
 #
@@ -928,6 +951,15 @@ head
 >
 <
 body
+dir
+=
+"
+&
+locale
+.
+dir
+;
+"
 >
 <
 h1
