Bug 561635 - Implement constraint validation API for output element. r=sicking a2.0=blocking
UltraBlame original commit: 8aa4ba7f114cf08ae5ad1b73b9ee18d5aecaae65

--- a/content/html/content/test/test_bug345624-1.html
+++ b/content/html/content/test/test_bug345624-1.html
@@ -107,6 +107,7 @@ fieldset
 button
 select
 keygen
+output
 {
 background
 -
@@ -333,6 +334,18 @@ k
 <
 /
 keygen
+>
+<
+output
+id
+=
+'
+o
+'
+>
+<
+/
+output
 >
 <
 /
@@ -945,16 +958,6 @@ checkDefaultPseudoClass
 (
 )
 {
-/
-/
-TODO
-:
-add
-check
-for
-<
-output
->
 is
 (
 window
@@ -967,6 +970,51 @@ getElementById
 (
 '
 f
+'
+)
+null
+)
+.
+getPropertyValue
+(
+'
+background
+-
+color
+'
+)
+"
+rgb
+(
+0
+0
+0
+)
+"
+"
+Nor
+:
+valid
+and
+:
+invalid
+should
+apply
+"
+)
+;
+is
+(
+window
+.
+getComputedStyle
+(
+document
+.
+getElementById
+(
+'
+o
 '
 )
 null
@@ -1230,6 +1278,7 @@ checkSpecificWillValidate
 /
 /
 fieldset
+output
 keygen
 (
 TODO
@@ -1252,6 +1301,31 @@ f
 willValidate
 "
 Fielset
+element
+should
+be
+barred
+from
+constraint
+validation
+"
+)
+;
+ok
+(
+!
+document
+.
+getElementById
+(
+'
+o
+'
+)
+.
+willValidate
+"
+Output
 element
 should
 be
@@ -2148,6 +2222,7 @@ function
 checkCustomError
 (
 element
+isBarred
 )
 {
 element
@@ -2159,6 +2234,12 @@ message
 "
 )
 ;
+if
+(
+!
+isBarred
+)
+{
 is
 (
 element
@@ -2184,6 +2265,34 @@ it
 "
 )
 ;
+}
+else
+{
+is
+(
+element
+.
+validationMessage
+"
+"
+"
+An
+element
+barred
+from
+constraint
+validation
+can
+'
+t
+have
+a
+validation
+message
+"
+)
+;
+}
 ok
 (
 element
@@ -2243,6 +2352,17 @@ background
 color
 '
 )
+isBarred
+?
+"
+rgb
+(
+0
+0
+0
+)
+"
+:
 "
 rgb
 (
@@ -2348,6 +2468,17 @@ background
 color
 '
 )
+isBarred
+?
+"
+rgb
+(
+0
+0
+0
+)
+"
+:
 "
 rgb
 (
@@ -2361,7 +2492,7 @@ rgb
 valid
 pseudo
 -
-class
+classs
 should
 apply
 "
@@ -2775,22 +2906,6 @@ valid
 )
 ;
 }
-/
-*
-TODO
-:
-add
-<
-output
->
-element
-when
-it
-will
-be
-implemented
-*
-/
 checkConstraintValidationAPIExist
 (
 document
@@ -2863,22 +2978,18 @@ k
 )
 )
 ;
-/
-*
-TODO
-:
-add
-<
-output
->
-element
-when
-it
-will
-be
-implemented
-*
-/
+checkConstraintValidationAPIExist
+(
+document
+.
+getElementById
+(
+'
+o
+'
+)
+)
+;
 checkConstraintValidationAPIDefaultValues
 (
 document
@@ -2947,6 +3058,18 @@ getElementById
 (
 '
 k
+'
+)
+)
+;
+checkConstraintValidationAPIDefaultValues
+(
+document
+.
+getElementById
+(
+'
+o
 '
 )
 )
@@ -3027,24 +3150,16 @@ t
 )
 ;
 /
-/
-Not
-checking
-fieldset
-output
-and
+*
+TODO
+:
+add
+"
 keygen
+"
+element
+*
 /
-/
-because
-they
-are
-always
-barred
-from
-constraint
-validation
-.
 checkCustomError
 (
 document
@@ -3055,6 +3170,7 @@ getElementById
 i
 '
 )
+false
 )
 ;
 checkCustomError
@@ -3067,6 +3183,7 @@ getElementById
 b
 '
 )
+false
 )
 ;
 checkCustomError
@@ -3079,6 +3196,7 @@ getElementById
 s
 '
 )
+false
 )
 ;
 checkCustomError
@@ -3091,6 +3209,33 @@ getElementById
 t
 '
 )
+false
+)
+;
+checkCustomError
+(
+document
+.
+getElementById
+(
+'
+f
+'
+)
+true
+)
+;
+checkCustomError
+(
+document
+.
+getElementById
+(
+'
+o
+'
+)
+true
 )
 ;
 /
@@ -3166,13 +3311,9 @@ TODO
 :
 add
 "
-output
-"
-and
-"
 keygen
 "
-elements
+element
 *
 /
 checkValidityStateObjectAliveWithoutElement
@@ -3207,6 +3348,13 @@ checkValidityStateObjectAliveWithoutElement
 (
 "
 textarea
+"
+)
+;
+checkValidityStateObjectAliveWithoutElement
+(
+"
+output
 "
 )
 ;
