Bug 588683 - Implement the form attribute. r=sicking sr=jst a2.0=blocking
UltraBlame original commit: 802c5ae92647e2faa639189622882201142794fd

--- a/content/html/content/test/test_bug332893-2.html
+++ b/content/html/content/test/test_bug332893-2.html
@@ -98,6 +98,44 @@ tr
 id
 =
 "
+F1I0
+"
+>
+<
+td
+>
+<
+input
+form
+=
+'
+form1
+'
+type
+=
+"
+input
+"
+value
+=
+"
+10
+"
+/
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+id
+=
+"
 F1I1
 "
 >
@@ -284,7 +322,7 @@ table1
 )
 ;
 var
-F1I1
+F1I0
 =
 table1
 .
@@ -297,6 +335,28 @@ tr
 [
 0
 ]
+;
+var
+F1I1
+=
+table1
+.
+getElementsByTagName
+(
+"
+tr
+"
+)
+[
+1
+]
+;
+table1
+.
+removeChild
+(
+F1I0
+)
 ;
 table1
 .
@@ -315,6 +375,16 @@ getElementById
 "
 table2
 "
+)
+;
+table2
+.
+insertBefore
+(
+F1I0
+table2
+.
+firstChild
 )
 ;
 table2
@@ -358,7 +428,7 @@ form1
 elements
 .
 length
-1
+2
 "
 Form
 1
@@ -384,6 +454,30 @@ value
 "
 Form
 1
+first
+element
+is
+correct
+"
+)
+;
+is
+(
+form1
+.
+elements
+[
+1
+]
+.
+value
+"
+10
+"
+"
+Form
+2
+second
 element
 is
 correct
