--- a/content/html/content/test/test_bug332893-3.html
+++ b/content/html/content/test/test_bug332893-3.html
@@ -110,6 +110,44 @@ tr
 id
 =
 "
+F1I0
+"
+>
+<
+td
+>
+<
+input
+form
+=
+'
+form1
+'
+type
+=
+"
+input
+"
+value
+=
+"
+10
+"
+/
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+id
+=
+"
 F1I1
 "
 >
@@ -312,7 +350,7 @@ table1
 )
 ;
 var
-F1I1
+F1I0
 =
 table1
 .
@@ -325,6 +363,28 @@ tr
 [
 0
 ]
+;
+var
+F1I1
+=
+table1
+.
+getElementsByTagName
+(
+"
+tr
+"
+)
+[
+1
+]
+;
+table1
+.
+removeChild
+(
+F1I0
+)
 ;
 table1
 .
@@ -343,6 +403,16 @@ getElementById
 "
 table2
 "
+)
+;
+table2
+.
+insertBefore
+(
+F1I0
+table2
+.
+firstChild
 )
 ;
 table2
@@ -387,7 +457,7 @@ elements
 .
 length
 "
-1
+2
 "
 "
 Form
@@ -417,6 +487,29 @@ Form
 1
 element
 1
+is
+correct
+"
+)
+;
+is
+(
+form1
+.
+elements
+[
+1
+]
+.
+value
+"
+10
+"
+"
+Form
+1
+element
+2
 is
 correct
 "
