--- a/content/media/test/test_decode_error.html
+++ b/content/media/test/test_decode_error.html
@@ -288,7 +288,7 @@ el
 .
 error
 instanceof
-HTMLMediaError
+MediaError
 "
 Element
 '
@@ -298,7 +298,7 @@ attr
 expected
 to
 be
-HTMLMediaError
+MediaError
 "
 )
 ;
@@ -309,7 +309,7 @@ el
 error
 .
 code
-HTMLMediaError
+MediaError
 .
 MEDIA_ERR_DECODE
 "
