Bug 589334 - 'IndexedDB: Get rid of IDBObjectStore::Modify, rename IDBObjectStore::AddOrModify to Put'. r=sicking
UltraBlame original commit: 109bedae3e7dbd05bb4d7c62ae6a04e19c358475

--- a/dom/indexedDB/test/test_readonly_transactions.html
+++ b/dom/indexedDB/test/test_readonly_transactions.html
@@ -410,7 +410,7 @@ objectStore
 osName
 )
 .
-addOrModify
+put
 (
 {
 }
@@ -465,7 +465,7 @@ osName
 READ_WRITE
 )
 .
-addOrModify
+put
 (
 {
 }
@@ -527,7 +527,7 @@ objectStore
 osName
 )
 .
-modify
+put
 (
 {
 }
@@ -582,7 +582,7 @@ osName
 READ_WRITE
 )
 .
-modify
+put
 (
 {
 }
@@ -869,7 +869,7 @@ objectStore
 osName
 )
 .
-addOrModify
+put
 (
 {
 }
@@ -923,7 +923,7 @@ objectStore
 osName
 )
 .
-addOrModify
+put
 (
 {
 }
@@ -984,7 +984,7 @@ objectStore
 osName
 )
 .
-modify
+put
 (
 {
 }
@@ -1035,7 +1035,7 @@ objectStore
 osName
 )
 .
-modify
+put
 (
 {
 }
