--- a/dom/indexedDB/test/test_transaction_abort.html
+++ b/dom/indexedDB/test/test_transaction_abort.html
@@ -707,7 +707,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -734,7 +734,7 @@ ok
 (
 true
 "
-Modify
+Put
 threw
 "
 )
@@ -744,7 +744,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -771,7 +771,7 @@ ok
 (
 true
 "
-AddOrModify
+Put
 threw
 "
 )
