--- a/dom/indexedDB/test/test_key_requirements.html
+++ b/dom/indexedDB/test/test_key_requirements.html
@@ -242,7 +242,7 @@ request
 =
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -272,7 +272,7 @@ event
 result
 key1
 "
-modify
+put
 gave
 the
 same
@@ -290,7 +290,7 @@ request
 =
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -320,7 +320,7 @@ event
 result
 key2
 "
-modify
+put
 gave
 the
 same
@@ -367,7 +367,7 @@ event
 result
 key2
 "
-modify
+put
 gave
 the
 same
@@ -380,7 +380,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -390,7 +390,7 @@ ok
 (
 false
 "
-addOrModify
+put
 with
 no
 key
@@ -410,7 +410,7 @@ ok
 (
 true
 "
-addOrModify
+put
 with
 no
 key
@@ -423,7 +423,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -433,7 +433,7 @@ ok
 (
 false
 "
-modify
+put
 with
 no
 key
@@ -453,7 +453,7 @@ ok
 (
 true
 "
-modify
+put
 with
 no
 key
@@ -586,7 +586,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -596,7 +596,7 @@ ok
 (
 false
 "
-addOrModify
+put
 with
 no
 key
@@ -616,7 +616,7 @@ ok
 (
 true
 "
-addOrModify
+put
 with
 no
 key
@@ -629,7 +629,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -639,7 +639,7 @@ ok
 (
 false
 "
-modify
+put
 with
 no
 key
@@ -659,7 +659,7 @@ ok
 (
 true
 "
-modify
+put
 with
 no
 key
@@ -793,7 +793,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -803,7 +803,7 @@ ok
 (
 false
 "
-addOrModify
+put
 with
 no
 key
@@ -823,7 +823,7 @@ ok
 (
 true
 "
-addOrModify
+put
 with
 no
 key
@@ -836,7 +836,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -846,7 +846,7 @@ ok
 (
 false
 "
-modify
+put
 with
 no
 key
@@ -866,7 +866,7 @@ ok
 (
 true
 "
-modify
+put
 with
 no
 key
@@ -969,7 +969,7 @@ request
 =
 objectStore
 .
-modify
+put
 (
 {
 id
@@ -1001,7 +1001,7 @@ event
 result
 key1
 "
-modify
+put
 gave
 back
 the
@@ -1014,7 +1014,7 @@ request
 =
 objectStore
 .
-addOrModify
+put
 (
 {
 id
@@ -1046,7 +1046,7 @@ event
 result
 key1
 "
-addOrModify
+put
 gave
 back
 the
@@ -1131,7 +1131,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -1142,7 +1142,7 @@ ok
 (
 false
 "
-modify
+put
 with
 null
 key
@@ -1162,7 +1162,7 @@ ok
 (
 true
 "
-modify
+put
 with
 null
 key
@@ -1175,7 +1175,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -1186,7 +1186,7 @@ ok
 (
 false
 "
-addOrModify
+put
 with
 null
 key
@@ -1206,7 +1206,7 @@ ok
 (
 true
 "
-addOrModify
+put
 with
 null
 key
@@ -1332,7 +1332,7 @@ request
 =
 objectStore
 .
-modify
+put
 (
 {
 id
@@ -1364,7 +1364,7 @@ event
 result
 key1
 "
-modify
+put
 gave
 the
 same
@@ -1381,7 +1381,7 @@ request
 =
 objectStore
 .
-addOrModify
+put
 (
 {
 id
@@ -1413,7 +1413,7 @@ event
 result
 key2
 "
-modify
+put
 gave
 the
 same
@@ -1426,7 +1426,7 @@ try
 {
 objectStore
 .
-addOrModify
+put
 (
 {
 }
@@ -1436,7 +1436,7 @@ ok
 (
 false
 "
-addOrModify
+put
 with
 no
 key
@@ -1456,7 +1456,7 @@ ok
 (
 true
 "
-addOrModify
+put
 with
 no
 key
@@ -1469,7 +1469,7 @@ try
 {
 objectStore
 .
-modify
+put
 (
 {
 }
@@ -1479,7 +1479,7 @@ ok
 (
 false
 "
-modify
+put
 with
 no
 key
@@ -1499,7 +1499,7 @@ ok
 (
 true
 "
-modify
+put
 with
 no
 key
